Fix #7 - issue with z-index

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -19,4 +19,5 @@ body {
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 1;
 }
